# tiya

./: .gitignore  README.md  README.zh-CN.md  SETUP_TELEGRAM.md  pyproject.toml  telegram-agent-architecture-review.md  tg_codex_bot.py  tiya.py
.github/: pull_request_template.md
.github/workflows/: desktop-package.yml  pr-validation.yml
desktop/: README.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/assets/: icon.icns
desktop/electron/: app_lifecycle.ts  gpu_mode.ts  main.ts  preload.ts  rpc.ts  runtime.ts  supervisor_runtime_core.ts
desktop/scripts/: build-deb-manual.mjs  build-rpm-prepackaged.mjs  build-sidecar.mjs  dev.mjs  generate-icons.mjs  generate_desktop_icons.py  package-mac.mjs  prepare-electron-runtime.mjs  prepare-mac-universal-sidecars.mjs  run-builder.mjs
desktop/shared/: api.ts
desktop/src/: App.tsx  schema.ts  styles.css  vite-env.d.ts
desktop/tests/: app_lifecycle.test.cjs  gpu_mode.test.cjs  supervisor_runtime_core.test.cjs
packaging/: build_desktop_sidecars.py  tiya_supervisor_entry.py
scripts/: profile_desktop_perf.py  version_manager.py
src/: app.py  cli.py  config.py  desktop_cli.py  envfile.py  instance_lock.py  logging_utils.py  managed_config.py  process_utils.py  provider_defaults.py  runtime_paths.py  secret_store.py  supervisor.py  supervisor_client.py  worker_state.py
src/domain/: models.py
src/services/: claude_runner.py  codex_runner.py  interaction_coordinator.py  runner_protocol.py  session_store.py  state_store.py  storage.py
src/services/storage/: __init__.py  attachments.py  maintenance.py  manager.py  runtime.py  schema.py  sessions.py  state.py
src/telegram/: client.py  render_dispatch.py  rendering.py  router.py  streaming.py
src/tg_codex/: __main__.py  app.py  config.py  logging_utils.py
src/tg_codex/domain/: models.py
src/tg_codex/services/: claude_runner.py  codex_runner.py  runner_protocol.py  session_store.py  state_store.py
tests/: test_claude_runner.py  test_cli.py  test_codex_runner.py  test_config.py  test_desktop_cli.py  test_desktop_packaging.py  test_interaction_coordinator.py  test_managed_config.py  test_process_utils.py  test_provider_defaults.py  test_rendering.py  test_router_integration.py  test_runtime_paths.py  test_secret_store.py  test_session_store.py  test_state_store.py  test_storage_runtime.py  test_streaming.py  test_supervisor.py  test_tg_stream_orchestrator.py  test_version_manager.py
(+3 files in other folders)
