[project]
name = "tiya"
version = "0.1.0"
description = "Run and continue local Codex/Claude sessions from Telegram"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "aiogram>=3.26.0,<4.0.0",
  "aiohttp-socks>=0.10.1,<0.11.0",
]

[project.scripts]
start = "cli:entry_start"
stop = "cli:entry_stop"
restart = "cli:entry_restart"
status = "cli:entry_status"
logs = "cli:entry_logs"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-q"
