[project]
name = "tiya"
version = "0.1.2"
description = "Run and continue local Codex/Claude sessions from Telegram"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "aiogram>=3.26.0,<4.0.0",
  "aiohttp-socks>=0.10.1,<0.11.0",
  "claude-agent-sdk>=0.1.47,<0.2.0",
  "telegramify-markdown[mermaid]==1.0.0rc5",
]

[project.scripts]
start = "src.cli:entry_start"
stop = "src.cli:entry_stop"
restart = "src.cli:entry_restart"
status = "src.cli:entry_status"
logs = "src.cli:entry_logs"
storage = "src.cli:entry_storage"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
cache-dir = ".uv-cache"
link-mode = "copy"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q"
